Fix Stock List alignment

--- a/src/components/sector/Sector.scss
+++ b/src/components/sector/Sector.scss
@@ -226,12 +226,8 @@
       font-size: 0.9rem;
 
       @include media('>=phone', '<tablet') {
-        grid-template-columns: 1.4fr 1fr 0.8fr 1fr 0.8fr;
-        padding: 2rem 1rem 1rem 1.5rem;
-        text-align: center;
-        div:nth-child(1) {
-          text-align: left;
-        }
+        grid-template-columns: 1.2fr 1fr 0.8fr 1fr 0.8fr;
+        padding: 2rem 1rem 1rem 3rem;
         div:nth-child(3) {
           display: none;
         }
@@ -254,8 +250,6 @@
       padding-bottom: 1.5rem;
 
       @include media('>=phone', '<tablet') {
-        padding-left: 1.5rem;
-        text-align: center;
         div:nth-child(3) {
           display: none;
         }
