--- a/src/components/sector/StockList.scss
+++ b/src/components/sector/StockList.scss
@@ -15,10 +15,9 @@
   margin-top: 1rem;
 
   @include media('>=phone', '<tablet') {
-    grid-template-columns: 1.4fr 1fr 0.8fr 1fr 0.8fr;
-    padding: 1rem 0 1rem 1rem;
+    grid-template-columns: 1.2fr 1fr 0.8fr 1fr 0.8fr;
+    padding: 1rem 0 1rem 2rem;
   }
-
   &:hover {
     background-color: $background-color;
   }
